--- a/quarkus/addons/grpc/deployment/pom.xml
+++ b/quarkus/addons/grpc/deployment/pom.xml
@@ -58,6 +58,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-grpc-deployment</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-devtools-utilities</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.kie.kogito</groupId>
