--- a/kogito-build/kogito-dependencies-bom/pom.xml
+++ b/kogito-build/kogito-dependencies-bom/pom.xml
@@ -131,7 +131,8 @@
     <version.org.mongo-image>5.0.31</version.org.mongo-image>
     <version.org.mozilla.rhino>1.8.1</version.org.mozilla.rhino>
     <version.org.redis>2.0.4</version.org.redis>
-    <version.org.postgres>15.9-alpine3.20</version.org.postgres>
+    <!-- Upgraded from 15.9-alpine3.20 to 16.8-alpine3.21 for Quarkus 3.20+ compatibility - PostgreSQL 16.8+ required for SASL authentication protocol -->
+    <version.org.postgres>16.8-alpine3.21</version.org.postgres>
     <!-- we align to version used by quarkus -->
     <version.org.apache.avro>1.12.0</version.org.apache.avro>
     <version.org.assertj>3.27.3</version.org.assertj>
@@ -978,11 +979,11 @@
         <version>${version.org.wiremock}</version>
         <scope>test</scope>
       </dependency>
+      <!-- SCRAM authentication support for PostgreSQL 16+ - removed test scope for runtime availability -->
       <dependency>
         <groupId>com.ongres.scram</groupId>
         <artifactId>client</artifactId>
         <version>${version.com.ongres.scram}</version>
-        <scope>test</scope>
       </dependency>
 
       <dependency>
